workload/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: haziq-homelab
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          ports:
            - containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
          resources:
            limits:
              nvidia.com/gpu: 1
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: plex-media-pvc
