workload/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  ingressClassName: traefik
  rules:
  - host: plex.haziqhakimi.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: plex
            port: 
              number:  32400
